# anyrun-plugins

./: .tmuxinator.yml  Cargo.toml  README.md  flake.nix  plugins.nix
plugins/bookmarks-launcher/: Cargo.toml  README.md
plugins/bookmarks-launcher/src/: lib.rs
plugins/tmuxinator-launcher/: Cargo.toml  README.md
plugins/tmuxinator-launcher/src/: lib.rs
