[workspace]
members = [
    "plugins/bookmarks-launcher",
    "plugins/tmuxinator-launcher",
    # Add more plugins here
]
resolver = "2"

[workspace.dependencies]
anyrun-plugin = { git = "https://github.com/anyrun-org/anyrun", tag = "v25.12.0" }
abi_stable = "0.11.3"
ron = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev. build-override]
opt-level = 0
codegen-units = 256
debug = false

[profile.release.build-override]
opt-level = 0
codegen-units = 256
